<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/Video"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:orientation="vertical">


    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/loading"
        app:SpinKit_Color="@color/White"
        android:layout_centerInParent="true"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp" />
    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/lightBlack">

        <ImageView
            android:id="@+id/btBack"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/ic_chevron_left_black_24dp" />

        <TextView
            android:id="@+id/tvNameStart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/btBack"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/nameVideo"
            android:textColor="@color/White"
            android:textSize="@dimen/_15sdp" />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/RelayVideoView"
        android:layout_below="@id/toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <VideoView
            android:id="@+id/videoview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />


        <LinearLayout

            android:id="@+id/lnViewChangePosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/_35sdp"
            android:visibility="invisible">

            <TextView
                android:id="@+id/tvCurrentPosition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timeCurrent"
                android:textColor="@color/White"
                android:textSize="@dimen/_20sdp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/"
                android:textColor="@color/White"
                android:textSize="@dimen/_20sdp" />

            <TextView
                android:id="@+id/tvDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timeDuration"
                android:textColor="@color/White"
                android:textSize="@dimen/_20sdp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnViewChangeVol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_35sdp"
            android:visibility="invisible">

            <ImageView

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_volume_up_black_24dp" />

            <TextView
                android:id="@+id/tvCurrentVol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currentVol"
                android:textColor="@color/White"
                android:textSize="@dimen/_20sdp" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/Controler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:background="@color/colorControler"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btBackVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:background="@color/lightDark"
                android:backgroundTint="@color/colorlightbutton"
                android:src="@drawable/icon_back" />
            <ImageButton
                android:id="@+id/btSaveVideo"
                android:src="@drawable/ic_playlist_add_black_24dp"
                android:layout_alignParentRight="true"
                android:layout_margin="@dimen/_10sdp"
                android:backgroundTint="@color/colorlightbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center">

                <ImageButton
                    android:id="@+id/btPre"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:background="@color/colorlightbutton"
                    android:src="@drawable/bt_pre_24dp" />

                <ImageButton
                    android:id="@+id/btPause"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_toRightOf="@id/btPre"
                    android:background="@color/colorlightbutton"
                    android:src="@drawable/bt_pause_24dp" />

                <ImageButton

                    android:id="@+id/btStart"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_toRightOf="@id/btPre"
                    android:background="@color/colorlightbutton"
                    android:src="@drawable/bt_play_24dp" />

                <ImageButton
                    android:id="@+id/btNext"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_toRightOf="@id/btPause"
                    android:background="@color/colorlightbutton"
                    android:src="@drawable/bt_next_24dp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_weight="8"
                android:background="@color/Black"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTimeStart"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="00:00"
                    android:textColor="@color/White" />

                <SeekBar
                    android:id="@+id/seekBar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="5"
                    android:backgroundTint="@color/White"
                    android:scrollbarStyle="insideInset" />

                <TextView
                    android:id="@+id/tvTimeEnd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="10:00"
                    android:textColor="@color/White" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/btChangeScreen"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:src="@drawable/bt_full_screen_24dp" />

                    <ImageView

                        android:id="@+id/btExitFullScreen"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignStart="@+id/btChangeScreen"
                        android:layout_alignLeft="@+id/btChangeScreen"
                        android:layout_marginStart="0dp"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:src="@drawable/ic_fullscreen_exit_black_24dp" />

                </RelativeLayout>


            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>
    <RelativeLayout
        android:visibility="invisible"
        android:background="@color/White"
        android:id="@+id/relaDetailVideoPlaying"
        android:layout_margin="@dimen/_3sdp"
        android:layout_below="@id/RelayVideoView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp">
        <TextView
            android:layout_marginLeft="@dimen/_5sdp"
            android:id="@+id/tvNameVideoPlaying"
            android:textColor="@color/Black"
            android:layout_toRightOf="@+id/relaBgr"
            android:layout_width="match_parent"
            android:text="@string/nameCategory"
            android:textSize="@dimen/_15sdp"
            android:maxLines="2"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tvTimeCreatVideoPlaying"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:paddingRight="@dimen/_3sdp"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/TimeCreat"
            android:textSize="@dimen/_10sdp"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>
    <LinearLayout
        android:id="@+id/lnSuggestVideo"
        android:layout_below="@id/relaDetailVideoPlaying"
        android:background="@color/White"
        android:layout_width="match_parent"
        android:visibility="invisible"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:textColor="@color/Black"
            android:textSize="@dimen/_15sdp"
            android:text="@string/Next_Video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <androidx.recyclerview.widget.RecyclerView

            android:id="@+id/rvListSuggest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>


</RelativeLayout>



